stuck at the game

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="game-container">
       <button class="rock">👊</button>
       <button class="paper">✋</button>
-      <button class="scissor">✌️</button>
+      <button class="scissors">✌️</button>
     </div>
     <div class="game-info">
       <div class="player-display">Player:</div>
